--- a/bld/Recipes2i18.ini
+++ b/bld/Recipes2i18.ini
@@ -1,6 +1,6 @@
 [config]
-database=192.168.168.6:RECIPES
-;database=c:\gdb\Recipes2i18.GDB
+;database=192.168.168.6:RECIPES
+database=c:\gdb\MINIMAL_Recipes2i18.GDB
 lang_num=2
 eloxiRecipes=0
 eloxiSetpoint=1
