--- a/bld/Recipes2i18.ini
+++ b/bld/Recipes2i18.ini
@@ -1,7 +1,10 @@
 [config]
 ;database=192.168.168.6:RECIPES
-database=c:\gdb\MINIMAL_Recipes2i18.GDB
-lang_num=2
+;database=C:\temp\montiEng_databases_backups\RECIPES.GDB
+database=C:\gdb\GrupaKety_Recipes2i18_CUSTOM.GDB
+log_database=C:\temp\montiEng_databases_backups\LOG.GDB
+
+lang_num=1
 prelDepoRins=1
 
 [dbgRecipes]
